# ntf_project

./: CMakeLists.txt  README.md  setup.sh
data/cat_pics/: cat1.pgm
include/armadillo_bits/: config.hpp
include/openblas/: openblas_config.h
share/Armadillo/CMake/: ArmadilloLibraryDepends.cmake
src/: load_images.cpp  main.cpp  other.cpp
